@@ -54,7 +54,7 @@
 </addon>
 
 <addon id="plugin.video.TVonDesiZone" name="TV on DESI ZONE"
-	version="1.3.8.3" provider-name="AJ">
+	version="1.3.8.4" provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
